# django-shadcn-starter-kit

./: .gitignore  main.py  package-lock.json  package.json  pyproject.toml
main/: settings.py  urls.py
static/css/: output.css
templates/: _base.html
testapp/: views.py
testapp/templates/testapp/: index.html
